--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1813,7 +1813,7 @@ header nav[aria-expanded='true'] .nav-tools #search-box .search-input {
   top: var(--nav-height);
   left: 0;
   width: 100vw;
-  background-color: #511211;
+  background: linear-gradient(180deg, #511211 0%, #6b1a19 50%, #511211 100%);
   z-index: 1001;
   display: none;
   overflow-y: auto;
