--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1833,6 +1833,12 @@ header nav[aria-expanded='true'] .nav-tools #search-box .search-input {
   padding: 0 70px;
 }
 
+.login-dropdown img[src*="loginPhone.png"] {
+  max-width: 660px;
+  width: 100%;
+  height: auto;
+}
+
 .login-close-btn {
   display: none;
   position: absolute;
