--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,7 @@
   --dark-red-color: #9c1d26;
   --dark-red-link-color:#801c1e;
   --red-color: #d13d3f;
+  --red-800: #6e0a0f;
   --btn-color-red: #902a2b;
   --btn-color-white: white;
   --gradient-pearl: linear-gradient(73deg, #C7C6C6 -74.4%, #F1F1F1 23.15%);
@@ -33,6 +34,7 @@
   --gradient-important-documents: linear-gradient(to bottom, #C5767D, #9E1E29);
   --gradient-earn-rewards: radial-gradient(231% 135.8% at 0.9% 2.98%, #FFF6 0%, #FFF0 100%);
   --gradient-red: linear-gradient(92deg, #5D2227 36.27%, #982B35 70.68%, #5D2227 85.89%);
+  --gradient-light-red: linear-gradient(97.67deg, rgba(55, 10, 14, 0.8) 6.64%, rgba(157, 29, 39, 0.8) 90.39%);
   --gradient-blue: linear-gradient(137deg, #08133C 4.07%, #2E3E79 75.46%);
   --gradient-heritage-cc-mayura-intro: linear-gradient(308deg, #110140 4.16%, #1E2A8E 44.91%, #010740 88.8%);
   --black-gradient: linear-gradient(90deg, rgb(0 0 0 / 0%) 0%, #000 65%);
@@ -58,6 +60,8 @@
   --cyan: #17a2b8;
   --white: #fff;
   --gray-light: #f9f9f9;
+  --gray-200: #eee;
+  --gray-300: #dbdbde;
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #007bff;
@@ -78,6 +82,7 @@
   --body-font-size-m: 19px;
   --body-font-size-s: 16px;
   --body-font-size-xs: 14px;
+  --body-font-size-xxs: 12px;
 
   /* heading sizes */
   --heading-font-size-xxl: 55px;
