--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,6 @@
 :root {
   /* colors */
   --background-color: white;
-  --light-color: #f5f5f5;
   --dark-color: #505050;
   --text-color: #25243B;
   --text-color-light: #DDDBDA; /* mayura */
@@ -60,8 +59,9 @@
   --teal: #20c997;
   --cyan: #17a2b8;
   --white: #fff;
+  --light-color: #f5f5f5; /* #f6f6f6 */
   --gray-light: #f9f9f9;
-  --gray-200: #eee;
+  --gray-200: #eee; /* #e9e9e9 */
   --gray-300: #dbdbde;
   --gray: #6c757d;
   --gray-dark: #343a40;
@@ -214,7 +214,7 @@ blockquote {
   margin-bottom: 0.25em;
 }
 
-p.button {
+p.button, p.button-container {
   margin: 0;
 }
 
